# mufw

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  release.yml
crates/mufw-cli/: Cargo.toml
crates/mufw-cli/src/: main.rs
crates/mufw-core/: Cargo.toml
crates/mufw-core/src/: anchor.rs  error.rs  lib.rs  pf.rs  rule.rs  store.rs
packaging/homebrew/: mufw.rb
packaging/launchd/: com.mufw.plist
scripts/: install.sh  uninstall.sh
