[workspace]
resolver = "2"
members = ["crates/mufw-core", "crates/mufw-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
authors = ["bragdev <contact@bragdev.com>"]
repository = "https://github.com/bragdev/mufw"
homepage = "https://github.com/bragdev/mufw"
documentation = "https://docs.rs/mufw"
readme = "README.md"
keywords = ["firewall", "pf", "macos", "ufw", "security"]
categories = ["command-line-utilities", "network-programming"]

[workspace.dependencies]
pfctl = "0.6"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
clap_mangen = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ipnet = { version = "2.9", features = ["serde"] }
nix = { version = "0.28", features = ["user"] }
tabled = "0.15"
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
