[package]
name = "mufw-core"
description = "Core library for mufw — ufw-like wrapper for macOS pf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
pfctl.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
ipnet.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
